fixed incorrect media query, frontNav no longer shows up on mobile

--- a/static/styles/main.prefixed.css
+++ b/static/styles/main.prefixed.css
@@ -788,7 +788,7 @@ h3 {
   width: 28.8em;
   z-index: -5;
 }
-@media all and (min-width: 500px) {
+@media all and (min-width: 800px) {
   .bell {
     display: block;
     position: absolute;
