--- a/static/styles/sass/partials/_sax.scss
+++ b/static/styles/sass/partials/_sax.scss
@@ -244,7 +244,7 @@ $armLen: 100%;
   width: 28.8em;
   z-index: -5;
 
-  @media all and (min-width: 500px) {
+  @media all and (min-width: $firstMedia) {
     display: block;
     position: absolute;
     left: 21em;
